--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-    "name": "investment-tracker",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
-    },
-    "dependencies": {
-      "next": "14.1.0",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "recharts": "^2.11.0",
-      "axios": "^1.6.5"
-    },
-    "devDependencies": {
-      "eslint": "^8.56.0",
-      "eslint-config-next": "14.1.0"
-    }
+  "name": "investment-tracker",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "axios": "^1.6.5",
+    "next": "14.1.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.11.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0"
   }
+}
